add and remove http json post data

--- a/loadbalancer.yaml
+++ b/loadbalancer.yaml
@@ -10,6 +10,11 @@ hosts:
         MyCustomParam: Test
       remove:
         RemoveMe: Remove
+    json_data_rules:
+      add:
+        MyCustomParam: Test
+      remove:
+        RemoveMe: Remove
     servers:
       - localhost:8081
       - localhost:8082
